gui enhancement and addition of footer

--- a/add-dataset.html
+++ b/add-dataset.html
@@ -14,8 +14,8 @@ permalink: /add-dataset/
   There was an error saving this page
 </div>
 
-<div class="row" data-hook="edit-view">
-  <div class="col-sm-8 col-sm-offset-2">
+<div class="row wrapper" data-hook="edit-view">
+  <div class="col-sm-12 primary">
     <h1>Add Dataset</h1>
     {% include dataset-form.html %}
   </div>
