--- a/datasets.html
+++ b/datasets.html
@@ -5,8 +5,8 @@ permalink: /datasets/
 ---
 {% include breadcrumbs.html %}
 
-<div class="row">
-  <div class="col-sm-4">
+<div class="row wrapper">
+  <div class="secondary col-sm-3">
 
     <h3>Categories</h3>
     <div class="list-group" data-component="categories-filter" data-show="5"></div>
@@ -14,8 +14,8 @@ permalink: /datasets/
     <h3>Organizations</h3>
     <div class="list-group" data-component="organizations-filter" data-show="15"></div>
   </div>
-  <div class="col-sm-8" data-component="datasets-list">
-    <h3 class="datasets-count" data-hook="datasets-count"></h3>
+  <div class="primary col-sm-9" data-component="datasets-list">
+    <h2 class="datasets-count" data-hook="datasets-count"></h2>
     <a href="{{ site.baseurl }}/add-dataset/" class="btn btn-outline-secondary float-right admin-only" data-hook="add-dataset-btn"><i class="fa fa-plus"></i> Add Dataset</a>
     <input type="text" data-hook="search-query" placeholder="Search..." class="form-control mb-3">
     <div data-hook="datasets-items"></div>
