--- a/faq.html
+++ b/faq.html
@@ -9,4 +9,7 @@ permalink: /faq/
   <div class="primary col-sm-12">
     <h2 class="coming-soon">Coming Soon</h2>
   </div>
+  <div class="primary col-sm-12">
+    <h2 class="coming-soon">faq 1</h2>
+  </div>
 </div>
