--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
     <p><a class="btn btn-primary btn-lg" href="{{ site.baseurl }}/datasets" role="button">Browse All</a></p>
   </div>
   <div class="col-md-4 catalog-logo">
-    <img src="{{site.baseurl}}{{site.logo}}">
+    <img class="inner-logo" src="{{site.baseurl}}{{site.logo}}">
   </div>
   
 </div>
