--- a/faq.html
+++ b/faq.html
@@ -11,7 +11,7 @@ permalink: /faq/
     <h6 class="coming-soon">The DataScientia foundation provides a data catalog template, developed in JKAN, which can be custumized by following you needs. Contact the DataScientia support to get the template, and become part of the community with your own catalog.</h6>
   </div>
   <div class="primary col-sm-12">
-    <h2 class="coming-soon">Can upload my own data ?</h2>
+    <h2 class="coming-soon">Can I upload my own data ?</h2>
     <h6 class="coming-soon">Register to the catalog you are interested in, by clicking the "Login" button on top. You will become an active member of the community, with possibility to upload your data on the Catalog in which you registered. Once logged in, the "Add datasets" option will appear to let you upload your data.</h6>
   </div>
   <div class="primary col-sm-12">
@@ -20,6 +20,6 @@ permalink: /faq/
   </div>
   <div class="primary col-sm-12">
     <h2 class="coming-soon">Do you have any other questions ?</h2>
-    <h6 class="coming-soon">Contact our technical support, which is at your disposal.</h6>
+    <h6 class="coming-soon">The DataScientia technical support is at your disposal. Contact Us.</h6>
   </div>
 </div>
