--- a/datasets.html
+++ b/datasets.html
@@ -11,6 +11,9 @@ permalink: /datasets/
     <h3>Categories</h3>
     <div class="list-group" data-component="categories-filter" data-show="5"></div>
 
+    <h3>Resource Types</h3>
+    <div style="margin-bottom: 20px;" class="list-group" data-component="type-filter" data-show="5"></div>
+
     <h3>Organizations</h3>
     <div class="list-group" data-component="organizations-filter" data-show="15"></div>
   </div>
