landing page and dataset update

--- a/index.html
+++ b/index.html
@@ -9,13 +9,30 @@ layout: default
       {{ site.description }}
     </p>
     <hr class="my-4">
+    <p class="lead">
+      <a style="color: blue" href="">Link to catalog/data project webpage</a>
+    </p>
+    <p class="lead">
+      <a style="color: blue" href="">Link to other webpages</a>
+    </p>
+    <hr class="my-4">
     <p><a class="btn btn-primary btn-lg" href="{{ site.baseurl }}/datasets" role="button">Browse All</a></p>
   </div>
   <div class="col-md-4 catalog-logo">
     <img class="inner-logo" src="{{site.baseurl}}{{site.logo}}">
   </div>
-  
 </div>
+
+
+<div class="jumbotron wrapper">
+  <div >
+    <h1 class="display-4">Catalog Additional Info</h1>
+    <p class="lead">
+      This section aims at providing any other additional information regarding the catalog and its usage. The catalog additional information could help the catalog users to better understand which kind of data is distributed, how to use such data and which are, eventually, the projects (services, app, research, education and innovation projects) connected to the catalog or to the data distributed.
+  </div>
+</div>
+
+
 
 <h3>Browse by Category</h3>
 <div class="homepage-categories">
